@@ -76,6 +76,7 @@
   <tr><td><a href="examples.html#pygame.examples.pixelarray.main">pygame.examples.pixelarray.main</a> - <font size=-1>display various pixelarray generated effects</font></td><td>display various pixelarray generated effects</td></tr>
   <tr><td><a href="examples.html#pygame.examples.scaletest.main">pygame.examples.scaletest.main</a> - <font size=-1>interactively scale an image using smoothscale</font></td><td>interactively scale an image using smoothscale</td></tr>
   <tr><td><a href="examples.html#pygame.examples.midi.main">pygame.examples.midi.main</a> - <font size=-1>run a midi example</font></td><td>run a midi example</td></tr>
+  <tr><td><a href="examples.html#pygame.examples.scroll.main">pygame.examples.scroll.main</a> - <font size=-1>run a Surface.scroll example that shows a magnified image</font></td><td>run a Surface.scroll example that shows a magnified image</td></tr>
 </table></small></ul>
 <p>These examples should help get you started with pygame. Here is a brief rundown of what you get. The source code for these examples is in the public domain. Feel free to use for your own projects. </p>
 <p>These examples can be run as stand-alone programs, or as described below, by importing the module and calling its main(). </p>
@@ -359,6 +360,16 @@
 <p>With the use of a virtual midi patch cord the output and input examples can be run as separate processes and connected so the keyboard output is displayed on a console. </p>
 <p>new to pygame <tt>1.9.0</tt> </p>
 <!--COMMENTS:pygame.examples.midi.main--> &nbsp;<br> 
+<br></ul>
+
+
+<a name="pygame.examples.scroll.main">
+<big><b>pygame.examples.scroll.main</big></b><br><ul>
+  <i>run a Surface.scroll example that shows a magnified image</i><br>
+  <tt>pygame.examples.scroll.main(image_file=None): return None</tt><br>
+<p>This example shows a scrollable image that has a zoom factor of eight. It uses the <tt>Surface.scroll</tt> function to shift the image on the display surface. <tt>A</tt> clip rectangle protects a margin area. If called as a function, the example accepts an optional image file path. If run as a program it takes an optional file path command line argument. If no file is provided a default image file is used. </p>
+<p>When running click on a black triangle to move one pixel in the direction the triangle points. Or use the arrow keys. Close the window or press <tt>ESC</tt> to quit. </p>
+<!--COMMENTS:pygame.examples.scroll.main--> &nbsp;<br> 
 <br></ul>
 <br></ul>
 
